// Vitest Snapshot v1

exports[`Login is cloud > Account has been activated > Renders the component 1`] = `
"<div class=\\"v-application v-theme--light v-layout v-layout--full-height v-locale--is-ltr\\" style=\\"z-index: 1000;\\">
  <div class=\\"v-application__wrap\\">
    <main class=\\"v-main d-flex align-center justify-center\\" style=\\"--v-layout-left: 0px; --v-layout-right: 0px; --v-layout-top: 0px; --v-layout-bottom: 0px; transition: none;\\">
      <div class=\\"v-container v-container--fluid\\">
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <div class=\\"v-card v-theme--dark v-card--density-default rounded-lg v-card--variant-elevated pa-6 bg-v-theme-surface\\">
              <!---->
              <div class=\\"v-card__loader\\">
                <div class=\\"v-progress-linear v-theme--dark\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
                  <!---->
                  <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
                  <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"v-progress-linear__indeterminate\\">
                      <div class=\\"v-progress-linear__indeterminate long\\"></div>
                      <div class=\\"v-progress-linear__indeterminate short\\"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              <div class=\\"v-card-title d-flex justify-center align-center mt-4\\">
                <div class=\\"v-responsive v-img v-img--booting\\" style=\\"max-width: 220px;\\" aria-label=\\"logo do ShellHub, uma nuvem de com a escrita ShellHub Admin ao lado\\" role=\\"img\\">
                  <div class=\\"v-responsive__sizer\\"></div>
                  <transition-stub name=\\"fade-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\"><img class=\\"v-img__img v-img__img--contain\\" src=\\"/src/assets/logo-inverted.png\\" alt=\\"\\" style=\\"display: none;\\"></transition-stub>
                  <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <!---->
                  </transition-stub>
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
              <div class=\\"v-container\\">
                <snackbarcomponent></snackbarcomponent>
                <form>
                  <div class=\\"v-container\\">
                    <div class=\\"v-input v-input--horizontal v-input--density-default v-text-field v-text-field--flush-details\\" data-test=\\"username-text\\">
                      <div class=\\"v-input__prepend\\">
                        <!----><i class=\\"mdi-account mdi v-icon notranslate v-theme--dark v-icon--size-default\\" aria-hidden=\\"true\\"></i>
                      </div>
                      <div class=\\"v-input__control\\">
                        <div class=\\"v-field v-field--variant-underlined v-theme--dark\\" role=\\"textbox\\">
                          <div class=\\"v-field__overlay\\"></div>
                          <div class=\\"v-field__loader\\">
                            <div class=\\"v-progress-linear v-theme--dark\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
                              <!---->
                              <div class=\\"v-progress-linear__background bg-primary\\" style=\\"width: 100%;\\"></div>
                              <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                                <div class=\\"v-progress-linear__indeterminate\\">
                                  <div class=\\"v-progress-linear__indeterminate long bg-primary\\"></div>
                                  <div class=\\"v-progress-linear__indeterminate short bg-primary\\"></div>
                                </div>
                              </transition-stub>
                              <!---->
                            </div>
                          </div>
                          <!---->
                          <div class=\\"v-field__field\\" data-no-activator=\\"\\">
                            <!----><label class=\\"v-label v-field-label\\" for=\\"input-0\\">
                              <!---->Username
                            </label>
                            <!----><input size=\\"1\\" type=\\"text\\" id=\\"input-0\\" aria-describedby=\\"input-0-messages\\" required=\\"\\" class=\\"v-field__input\\">
                            <!---->
                          </div>
                          <!---->
                          <!---->
                          <div class=\\"v-field__outline\\">
                            <!----><label class=\\"v-label v-field-label v-field-label--floating\\" aria-hidden=\\"true\\" for=\\"input-0\\">
                              <!---->Username
                            </label>
                          </div>
                        </div>
                      </div>
                      <!---->
                      <div class=\\"v-input__details\\">
                        <transition-group-stub name=\\"slide-y-transition\\" tag=\\"div\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" class=\\"v-messages\\" role=\\"alert\\" aria-live=\\"polite\\" id=\\"input-0-messages\\">
                          <!---->
                        </transition-group-stub>
                        <!---->
                      </div>
                    </div>
                    <div class=\\"v-input v-input--horizontal v-input--density-default v-text-field v-text-field--flush-details\\" data-test=\\"password-text\\">
                      <div class=\\"v-input__prepend\\">
                        <!----><i class=\\"mdi-lock mdi v-icon notranslate v-theme--dark v-icon--size-default\\" aria-hidden=\\"true\\"></i>
                      </div>
                      <div class=\\"v-input__control\\">
                        <div class=\\"v-field v-field--appended v-field--variant-underlined v-theme--dark\\" role=\\"textbox\\">
                          <div class=\\"v-field__overlay\\"></div>
                          <div class=\\"v-field__loader\\">
                            <div class=\\"v-progress-linear v-theme--dark\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
                              <!---->
                              <div class=\\"v-progress-linear__background bg-primary\\" style=\\"width: 100%;\\"></div>
                              <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                                <div class=\\"v-progress-linear__indeterminate\\">
                                  <div class=\\"v-progress-linear__indeterminate long bg-primary\\"></div>
                                  <div class=\\"v-progress-linear__indeterminate short bg-primary\\"></div>
                                </div>
                              </transition-stub>
                              <!---->
                            </div>
                          </div>
                          <!---->
                          <div class=\\"v-field__field\\" data-no-activator=\\"\\">
                            <!----><label class=\\"v-label v-field-label\\" for=\\"input-2\\">
                              <!---->Password
                            </label>
                            <!----><input size=\\"1\\" type=\\"password\\" id=\\"input-2\\" aria-describedby=\\"input-2-messages\\" required=\\"\\" class=\\"v-field__input\\">
                            <!---->
                          </div>
                          <!---->
                          <div class=\\"v-field__append-inner\\">
                            <!----><i class=\\"mdi-eye-off mdi v-icon notranslate v-theme--dark v-icon--size-default v-icon--clickable\\" role=\\"button\\" aria-hidden=\\"false\\" aria-label=\\"Password appended action\\"></i>
                          </div>
                          <div class=\\"v-field__outline\\">
                            <!----><label class=\\"v-label v-field-label v-field-label--floating\\" aria-hidden=\\"true\\" for=\\"input-2\\">
                              <!---->Password
                            </label>
                          </div>
                        </div>
                      </div>
                      <!---->
                      <div class=\\"v-input__details\\">
                        <transition-group-stub name=\\"slide-y-transition\\" tag=\\"div\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" class=\\"v-messages\\" role=\\"alert\\" aria-live=\\"polite\\" id=\\"input-2-messages\\">
                          <!---->
                        </transition-group-stub>
                        <!---->
                      </div>
                    </div>
                    <div class=\\"v-card-actions justify-center\\"><button type=\\"submit\\" class=\\"v-btn v-btn--block v-theme--dark text-primary v-btn--density-default v-btn--size-default v-btn--variant-tonal\\" data-test=\\"login-btn\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
                        <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"> LOGIN </span>
                        <!---->
                        <!---->
                      </button></div>
                    <div class=\\"v-card-subtitle d-flex align-center justify-center pa-4 mx-auto pt-4 pb-0\\" data-test=\\"forgotPassword-card\\"> Forgot your <a href=\\"/forgot-pass\\" class=\\"ml-1\\"> Password? </a></div>
                    <div class=\\"v-card-subtitle d-flex align-center justify-center pa-4 mx-auto\\" data-test=\\"isCloud-card\\"> Don't have an account? <a href=\\"/sign-up\\" class=\\"ml-1\\"> Sign up here </a></div>
                  </div>
                </form>
              </div>
              <!---->
              <!----><span class=\\"v-card__underlay\\"></span>
            </div>
          </div>
        </div>
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <!--v-if-->
          </div>
        </div>
      </div>
    </main>
  </div>
</div>"
`;

exports[`Login is cloud > Account has not been activated > Renders the component 1`] = `
"<div class=\\"v-application v-theme--light v-layout v-layout--full-height v-locale--is-ltr\\" style=\\"z-index: 1000;\\">
  <div class=\\"v-application__wrap\\">
    <main class=\\"v-main d-flex align-center justify-center\\" style=\\"--v-layout-left: 0px; --v-layout-right: 0px; --v-layout-top: 0px; --v-layout-bottom: 0px; transition: none;\\">
      <div class=\\"v-container v-container--fluid\\">
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <div class=\\"v-card v-theme--dark v-card--density-default rounded-lg v-card--variant-elevated pa-6 bg-v-theme-surface\\">
              <!---->
              <div class=\\"v-card__loader\\">
                <div class=\\"v-progress-linear v-theme--dark\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
                  <!---->
                  <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
                  <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"v-progress-linear__indeterminate\\">
                      <div class=\\"v-progress-linear__indeterminate long\\"></div>
                      <div class=\\"v-progress-linear__indeterminate short\\"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              <div class=\\"v-card-title d-flex justify-center align-center mt-4\\">
                <div class=\\"v-responsive v-img v-img--booting\\" style=\\"max-width: 220px;\\" aria-label=\\"logo do ShellHub, uma nuvem de com a escrita ShellHub Admin ao lado\\" role=\\"img\\">
                  <div class=\\"v-responsive__sizer\\"></div>
                  <transition-stub name=\\"fade-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\"><img class=\\"v-img__img v-img__img--contain\\" src=\\"/src/assets/logo-inverted.png\\" alt=\\"\\" style=\\"display: none;\\"></transition-stub>
                  <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <!---->
                  </transition-stub>
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
              <div class=\\"v-container\\">
                <snackbarcomponent></snackbarcomponent>
                <form>
                  <div class=\\"v-container\\">
                    <div class=\\"v-input v-input--horizontal v-input--density-default v-text-field v-text-field--flush-details\\" data-test=\\"username-text\\">
                      <div class=\\"v-input__prepend\\">
                        <!----><i class=\\"mdi-account mdi v-icon notranslate v-theme--dark v-icon--size-default\\" aria-hidden=\\"true\\"></i>
                      </div>
                      <div class=\\"v-input__control\\">
                        <div class=\\"v-field v-field--variant-underlined v-theme--dark\\" role=\\"textbox\\">
                          <div class=\\"v-field__overlay\\"></div>
                          <div class=\\"v-field__loader\\">
                            <div class=\\"v-progress-linear v-theme--dark\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
                              <!---->
                              <div class=\\"v-progress-linear__background bg-primary\\" style=\\"width: 100%;\\"></div>
                              <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                                <div class=\\"v-progress-linear__indeterminate\\">
                                  <div class=\\"v-progress-linear__indeterminate long bg-primary\\"></div>
                                  <div class=\\"v-progress-linear__indeterminate short bg-primary\\"></div>
                                </div>
                              </transition-stub>
                              <!---->
                            </div>
                          </div>
                          <!---->
                          <div class=\\"v-field__field\\" data-no-activator=\\"\\">
                            <!----><label class=\\"v-label v-field-label\\" for=\\"input-0\\">
                              <!---->Username
                            </label>
                            <!----><input size=\\"1\\" type=\\"text\\" id=\\"input-0\\" aria-describedby=\\"input-0-messages\\" required=\\"\\" class=\\"v-field__input\\">
                            <!---->
                          </div>
                          <!---->
                          <!---->
                          <div class=\\"v-field__outline\\">
                            <!----><label class=\\"v-label v-field-label v-field-label--floating\\" aria-hidden=\\"true\\" for=\\"input-0\\">
                              <!---->Username
                            </label>
                          </div>
                        </div>
                      </div>
                      <!---->
                      <div class=\\"v-input__details\\">
                        <transition-group-stub name=\\"slide-y-transition\\" tag=\\"div\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" class=\\"v-messages\\" role=\\"alert\\" aria-live=\\"polite\\" id=\\"input-0-messages\\">
                          <!---->
                        </transition-group-stub>
                        <!---->
                      </div>
                    </div>
                    <div class=\\"v-input v-input--horizontal v-input--density-default v-text-field v-text-field--flush-details\\" data-test=\\"password-text\\">
                      <div class=\\"v-input__prepend\\">
                        <!----><i class=\\"mdi-lock mdi v-icon notranslate v-theme--dark v-icon--size-default\\" aria-hidden=\\"true\\"></i>
                      </div>
                      <div class=\\"v-input__control\\">
                        <div class=\\"v-field v-field--appended v-field--variant-underlined v-theme--dark\\" role=\\"textbox\\">
                          <div class=\\"v-field__overlay\\"></div>
                          <div class=\\"v-field__loader\\">
                            <div class=\\"v-progress-linear v-theme--dark\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
                              <!---->
                              <div class=\\"v-progress-linear__background bg-primary\\" style=\\"width: 100%;\\"></div>
                              <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                                <div class=\\"v-progress-linear__indeterminate\\">
                                  <div class=\\"v-progress-linear__indeterminate long bg-primary\\"></div>
                                  <div class=\\"v-progress-linear__indeterminate short bg-primary\\"></div>
                                </div>
                              </transition-stub>
                              <!---->
                            </div>
                          </div>
                          <!---->
                          <div class=\\"v-field__field\\" data-no-activator=\\"\\">
                            <!----><label class=\\"v-label v-field-label\\" for=\\"input-2\\">
                              <!---->Password
                            </label>
                            <!----><input size=\\"1\\" type=\\"password\\" id=\\"input-2\\" aria-describedby=\\"input-2-messages\\" required=\\"\\" class=\\"v-field__input\\">
                            <!---->
                          </div>
                          <!---->
                          <div class=\\"v-field__append-inner\\">
                            <!----><i class=\\"mdi-eye-off mdi v-icon notranslate v-theme--dark v-icon--size-default v-icon--clickable\\" role=\\"button\\" aria-hidden=\\"false\\" aria-label=\\"Password appended action\\"></i>
                          </div>
                          <div class=\\"v-field__outline\\">
                            <!----><label class=\\"v-label v-field-label v-field-label--floating\\" aria-hidden=\\"true\\" for=\\"input-2\\">
                              <!---->Password
                            </label>
                          </div>
                        </div>
                      </div>
                      <!---->
                      <div class=\\"v-input__details\\">
                        <transition-group-stub name=\\"slide-y-transition\\" tag=\\"div\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" class=\\"v-messages\\" role=\\"alert\\" aria-live=\\"polite\\" id=\\"input-2-messages\\">
                          <!---->
                        </transition-group-stub>
                        <!---->
                      </div>
                    </div>
                    <div class=\\"v-card-actions justify-center\\"><button type=\\"submit\\" class=\\"v-btn v-btn--block v-theme--dark text-primary v-btn--density-default v-btn--size-default v-btn--variant-tonal\\" data-test=\\"login-btn\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
                        <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"> LOGIN </span>
                        <!---->
                        <!---->
                      </button></div>
                    <div class=\\"v-card-subtitle d-flex align-center justify-center pa-4 mx-auto pt-4 pb-0\\" data-test=\\"forgotPassword-card\\"> Forgot your <a href=\\"/forgot-pass\\" class=\\"ml-1\\"> Password? </a></div>
                    <div class=\\"v-card-subtitle d-flex align-center justify-center pa-4 mx-auto\\" data-test=\\"isCloud-card\\"> Don't have an account? <a href=\\"/sign-up\\" class=\\"ml-1\\"> Sign up here </a></div>
                  </div>
                </form>
              </div>
              <!---->
              <!----><span class=\\"v-card__underlay\\"></span>
            </div>
          </div>
        </div>
        <div class=\\"v-row align-center justify-center\\">
          <div class=\\"v-col-sm-8 v-col-md-4 v-col-12\\">
            <div class=\\"v-card v-theme--light bg-transparent v-card--density-default v-card--variant-elevated elevation-0 bg-v-theme-surface mt-2\\" data-test=\\"accountCreated-component\\">
              <!---->
              <div class=\\"v-card__loader\\">
                <div class=\\"v-progress-linear v-theme--light\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
                  <!---->
                  <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
                  <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
                    <div class=\\"v-progress-linear__indeterminate\\">
                      <div class=\\"v-progress-linear__indeterminate long\\"></div>
                      <div class=\\"v-progress-linear__indeterminate short\\"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              <div class=\\"v-card-title text-h5 pa-3 bg-primary\\"> Account Creation Successful </div>
              <div class=\\"v-card-text mt-4 mb-0 pb-1\\">
                <p class=\\"text-caption mt-2 mb-0\\"> Thank you for registering an account on ShellHub. An email was sent with a confirmation link. You need to click on the link to activate your account. </p>
                <p class=\\"text-caption mt-2 mb-0\\"> If you haven't received the email, click on the button. </p>
              </div>
              <div class=\\"v-card-actions justify-center\\">
                <div class=\\"flex-grow-1\\"></div><button type=\\"submit\\" class=\\"v-btn v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text\\" data-test=\\"resendEmail-btn\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
                  <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"> RESEND EMAIL </span>
                  <!---->
                  <!---->
                </button>
              </div>
              <!---->
              <!----><span class=\\"v-card__underlay\\"></span>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>"
`;
